# ai_software_factory

./: pyproject.toml
src/ai_software_factory/: crew.py  main.py
src/ai_software_factory/config/: agents.yaml  tasks.yaml
src/ai_software_factory/tools/: deployment_tools.py
